--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,4 @@
-<h2 id="title">Welcome to Ember</h2>
+<h2 id="title">Locus Coding Challenge</h2>
+<h5>Functionality: This app displays the time interval between two dates and times and gives a specific set of options depending on the time interval</h5>
 
 {{outlet}}
