--- a/app/templates/time-action.hbs
+++ b/app/templates/time-action.hbs
@@ -1,1 +1,5 @@
+<h4>From: {{input type="string" value=fromDate placeholder="mm/dd/yyyy"}} {{input type="string" value=fromTime placeholder="24:00"}}</h4>
+<h4>To:{{input type="string" value=toDate placeholder="mm/dd/yyyy"}} {{input type="string" value=toTime placeholder="24:00"}}</h4>
+<h3>Time Interval:{{time-calculations}}</h3>
+
 {{outlet}}
