--- a/app/templates/time-action.hbs
+++ b/app/templates/time-action.hbs
@@ -1,5 +1,11 @@
-<h4>From: {{input type="text" value=fromDate placeholder="mm/dd/yyyy"}} {{input type="text" value=fromTime placeholder="24:00"}}</h4>
-<h4>To:{{input type="text" value=toDate placeholder="mm/dd/yyyy"}} {{input type="text" value=toTime placeholder="24:00"}}</h4>
-<h3>Time Interval: {{date-calculation fromDate toDate}} milliseconds</h3>
+<h4>From: {{input type="text" value=fromDate placeholder="mm/dd/yyyy" maxlength="10"}}
+{{input type="text" value=fromTime placeholder="24:00" maxlength="5"}}</h4>
+
+<h4>To:{{input type="text" value=toDate placeholder="mm/dd/yyyy" maxlength="10"}}
+{{input type="text" value=toTime placeholder="24:00" maxlength="5"}}</h4>
+
+<h3>Time Interval: {{date-calculation fromDate toDate fromTime toTime}}</h3>
+
+
 
 {{outlet}}
