--- a/app/templates/time-action.hbs
+++ b/app/templates/time-action.hbs
@@ -4,7 +4,7 @@
 <h4>To:{{input type="text" value=toDate placeholder="mm/dd/yyyy" maxlength="10"}}
 {{input type="text" value=toTime placeholder="24:00" maxlength="5"}}</h4>
 
-<h3>Time Interval: {{date-calculation fromDate toDate fromTime toTime}}</h3>
+<h3>Time Interval: {{interval-printer (date-calculation fromDate toDate fromTime toTime)}}</h3>
 
 
 
