--- a/app/templates/time-action.hbs
+++ b/app/templates/time-action.hbs
@@ -5,5 +5,6 @@
 {{input type="text" value=toTime placeholder="24:00" maxlength="5"}}</h4>
 
 <h3>Time Interval: {{interval-printer (date-calculation fromDate toDate fromTime toTime)}}</h3>
-{{timeDiff}}
+<h2>Options</h2>
+
 {{outlet}}
